# purcell

./: .gitignore  README.md  README.txt  TODO.txt  accidental_to_stencil.py  accidental_to_width.py  anchor_to_dimensioned_anchor.py  anchor_to_referent.py  bar_line_to_stencil.py  bar_line_to_width.py  beam_to_beam_positions.py  beam_to_stencil.py  blackmagick.py  bravura_tools.py  clef_to_stencil.py  clef_to_width.py  clef_to_y_position.py  clef_type_to_clefs.py  document_properties.py  dots_to_stencil.py  dots_to_width.py  duration_log_to_dimension.py  duration_log_to_flag_stencil.py  duration_log_to_natural_stem_direction.py  duration_log_to_notes.py  duration_log_to_stem_direction.py  duration_log_to_stem_length.py  duration_log_to_stencil.py  duration_log_to_width.py  dynamic_test.py  dynamic_to_alignment_directive.py  dynamic_to_staff_position.py  dynamic_to_unicode.py  emmentaler-cache.txt  emmentaler-unicode-glyph-index-cache.txt  emmentaler_tools.py  end_to_durations.py  end_to_last_endless_staff_symbol.py  first_clef_on_staves.py  first_or_last_needle_on_staves.py  (+49 more)
cmake/: CMakeLists.txt
css/: purcell.css
deprecated/: bravura_toos.py  emmentaler_tools.py  staff_position_to_y_position.py  time_signature_to_height.py  time_signature_to_width.py  tuplet_to_factor.py
fonts/: README.txt  stylesheet.css
html/: index.html
httpd/: CMakeLists.txt  simple-server.cc
js/: purcell.js  purcell_httpd.js  purcell_sql_js.js  purcell_websocket.js  purcell_websocket.js~
new_way/: horstemps_next_to_horstemps_x_offset.py  key_signature_to_width.py  nexts_to_graphical_next.py  properties.py  rhythmic_events_to_durations.py  rhythmic_events_to_local_onsets.py  skyline.py
new_way/scratch/: CTE.py  bug.py  bug2.py  cond_trig.py  global_onsets_to_columns.py  local_onsets_to_global_onsets_OLD.py  nexts_to_graphical_next.py  onset_events_to_order.py  rhythmic_events_to_onsets.py
python/: accidental_to_stencil.py  accidental_to_width.py  anchor_to_dimensioned_anchor.py  anchor_to_referent.py  bar_line_to_stencil.py  bar_line_to_width.py  beam_to_beam_positions.py  beam_to_stencil.py  bravura_tools.py  build_simple_webserver.py  clef_to_width.py  conversion_tools.py  core_tools.py  dots_to_stencil.py  dots_to_width.py  duration_log_to_dimension.py  duration_log_to_flag_stencil.py  duration_log_to_natural_stem_direction.py  duration_log_to_stem_length.py  duration_log_to_stencil.py  dynamic_test.py  dynamic_to_alignment_directive.py  dynamic_to_staff_position.py  dynamic_to_unicode.py  generic_simple_glyph_writer.py  graphical_next_to_space_prev.py  horstemps_next_to_horstemps_x_offset.py  key_signature_to_stencil.py  key_signature_to_width.py  ledger_line_to_line_stencil.py  local_onsets_to_global_onsets.py  natural_stem_direction_to_stem_direction.py  natural_stem_end_to_stem_end.py  note_head_to_ledger_line.py  note_head_to_staff_position.py  output_to_sql.py  position_to_anchored_position.py  properties.py  rest_to_staff_position.py  rhythmic_events_to_durations.py  (+14 more)
websocket/: CMakeLists.txt  simple-server.c
